@@ -1,4 +1,6 @@
 <?xml version="1.0"?>
 <object name="members">
- <property name="schema">members members_readonly_entry_flag</property>
+  <property name="schemas" purge="False">
+   <element value="members_readonly_entry_flag"/>
+  </property>
 </object>
